--- a/src/app/styles/antd-override.scss
+++ b/src/app/styles/antd-override.scss
@@ -27,3 +27,13 @@
     color: #fff;
   }
 }
+
+.ant-btn-warning {
+  background-color: #deed13;
+  color: #000;
+
+  &:hover {
+    background-color: #deed13;
+    color: #000;
+  }
+}
