--- a/src/app/styles/antd-override.scss
+++ b/src/app/styles/antd-override.scss
@@ -57,3 +57,13 @@
     color: #fff;
   }
 }
+
+.ant-btn-danger {
+  background-color: #e14837;
+  color: #fff;
+
+  &:hover {
+    background-color: #e2331f;
+    color: #fff;
+  }
+}
